# blackbox-analyser

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yml
include/: application.h  common_data.h  data_loader.h  data_sources.h  gui_manager.h  log_record.h  menu_gui.h  utils.h  window.h
include/gui/: demo_gui.h  gui.h  gui_manager.h  menu_gui.h
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
src/: application.cpp  common_data.cpp  data_sources.cpp  demo_gui.cpp  gui_manager.cpp  main.cpp  menu_gui.cpp  utils.cpp  window.cpp
src/gui/: demo_gui.cpp  gui_manager.cpp  menu_gui.cpp
